src/objects/ADvendio__Campaign_Item__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox activates the agency commission for this campaign item.</description>
        <inlineHelpText>This checkbox activates the agency commission for this campaign item.</inlineHelpText>
        <label>AC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ADTECH_Campaign_type__c</fullName>
        <description>Choose this campaign item&apos;s campaign type for its creation in your ADTECH ad server.</description>
        <inlineHelpText>Choose this campaign item&apos;s campaign type for its creation in your ADTECH ad server.</inlineHelpText>
        <label>ADTECH Campaign type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Click Command</fullName>
                </value>
                <value>
                    <fullName>Guaranteed</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Roadblock</fullName>
                </value>
                <value>
                    <fullName>ShareOfVoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__AVTotalMeasurableAiRate__c</fullName>
        <description>The percentage of total impressions that were measurable by active view (out of all the total impressions sampled for active view) according to DFP.</description>
        <inlineHelpText>The percentage of total impressions that were measurable by active view (out of all the total impressions sampled for active view) according to DFP.</inlineHelpText>
        <label>AV Total Measurable AI Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdAreaCodes__c</fullName>
        <inlineHelpText>Targeting Area Codes</inlineHelpText>
        <label>AdAreaCodes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DE30</fullName>
                </value>
                <value>
                    <fullName>DE40</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__AdBrowsersMajorVersion__c</fullName>
        <description>Enter the major version numbers of targeted browsers.</description>
        <inlineHelpText>Enter the major version numbers of targeted browsers.</inlineHelpText>
        <label>AdBrowsersMajor Version</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdBrowsersMinorVersion__c</fullName>
        <description>Enter the minor version numbers of targeted browsers.</description>
        <inlineHelpText>Enter the minor version numbers of targeted browsers.</inlineHelpText>
        <label>AdBrowsersMinor Version</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdDayOfWeek__c</fullName>
        <description>List the days on which the ad shall be displayed.</description>
        <inlineHelpText>List the days on which the ad shall be displayed.</inlineHelpText>
        <label>AdDayOfWeek</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__AdHourOfDay__c</fullName>
        <description>Enter the the time frame of the day during which the ad spec shall be displayed.</description>
        <inlineHelpText>Enter the the time frame of the day during which the ad spec shall be displayed.</inlineHelpText>
        <label>AdHourOfDay</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0:00 - 1:00</fullName>
                </value>
                <value>
                    <fullName>1:00 - 2:00</fullName>
                </value>
                <value>
                    <fullName>2:00 - 3:00</fullName>
                </value>
                <value>
                    <fullName>3:00 - 4:00</fullName>
                </value>
                <value>
                    <fullName>4:00 - 5:00</fullName>
                </value>
                <value>
                    <fullName>5:00 - 6:00</fullName>
                </value>
                <value>
                    <fullName>6:00 - 7:00</fullName>
                </value>
                <value>
                    <fullName>7:00 - 8:00</fullName>
                </value>
                <value>
                    <fullName>8:00 - 9:00</fullName>
                </value>
                <value>
                    <fullName>9:00 - 10:00</fullName>
                </value>
                <value>
                    <fullName>10:00 - 11:00</fullName>
                </value>
                <value>
                    <fullName>11:00 - 12:00</fullName>
                </value>
                <value>
                    <fullName>12:00 - 13:00</fullName>
                </value>
                <value>
                    <fullName>13:00 - 14:00</fullName>
                </value>
                <value>
                    <fullName>14:00 - 15:00</fullName>
                </value>
                <value>
                    <fullName>15:00 - 16:00</fullName>
                </value>
                <value>
                    <fullName>16:00 - 17:00</fullName>
                </value>
                <value>
                    <fullName>17:00 - 18:00</fullName>
                </value>
                <value>
                    <fullName>18:00 - 19:00</fullName>
                </value>
                <value>
                    <fullName>19:00 - 20:00</fullName>
                </value>
                <value>
                    <fullName>20:00 - 21:00</fullName>
                </value>
                <value>
                    <fullName>21:00 - 22:00</fullName>
                </value>
                <value>
                    <fullName>22:00 - 23:00</fullName>
                </value>
                <value>
                    <fullName>23:00 - 24:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__AdISPs__c</fullName>
        <description>Internet Service Provider.</description>
        <label>Internet Service Providers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DE - Deutsche Telekom</fullName>
                </value>
                <value>
                    <fullName>DE - Kabel Deutschland</fullName>
                </value>
                <value>
                    <fullName>DE - Vodafone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__AdKeyValues__c</fullName>
        <description>This field is filled automatically with the key value string generated by the entered criteria.</description>
        <inlineHelpText>This field is filled automatically with the key value string generated by the entered criteria.</inlineHelpText>
        <label>AdKeyValues</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdKeyWords__c</fullName>
        <description>This field is filled automatically with the key words chosen in the entered criteria.</description>
        <inlineHelpText>This field is filled automatically with the key words chosen in the entered criteria.</inlineHelpText>
        <label>AdKeyWords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdManagerStatus__c</fullName>
        <description>Displays the processing status - could be entered manually or by a Workflow, Batch or Lightning Flow.</description>
        <inlineHelpText>Displays the processing status of that Campaign Item.</inlineHelpText>
        <label>Ad Manager Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdOperatingSystems__c</fullName>
        <description>You can define the operating systems on which the ad spec shall be displayed. This targeting is used during delivery.</description>
        <inlineHelpText>You can define the operating systems on which the ad spec shall be displayed. This targeting is used during delivery.</inlineHelpText>
        <label>AdOperatingSystems</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>Apple iOS</fullName>
                </value>
                <value>
                    <fullName>BlackBerry</fullName>
                </value>
                <value>
                    <fullName>DoCoMo</fullName>
                </value>
                <value>
                    <fullName>Linux</fullName>
                </value>
                <value>
                    <fullName>Macintosh</fullName>
                </value>
                <value>
                    <fullName>Microsoft Windows 2000</fullName>
                </value>
                <value>
                    <fullName>Microsoft Windows 7</fullName>
                </value>
                <value>
                    <fullName>Microsoft Windows 8</fullName>
                </value>
                <value>
                    <fullName>Microsoft Windows 95</fullName>
                </value>
                <value>
                    <fullName>Microsoft Windows 98</fullName>
                </value>
                <value>
                    <fullName>Microsoft Windows NT</fullName>
                </value>
                <value>
                    <fullName>Microsoft Windows Unknown Version</fullName>
                </value>
                <value>
                    <fullName>Microsoft Windows Vista</fullName>
                </value>
                <value>
                    <fullName>Microsoft Windows XP</fullName>
                </value>
                <value>
                    <fullName>Nokia Series 60</fullName>
                </value>
                <value>
                    <fullName>Other/Unknown</fullName>
                </value>
                <value>
                    <fullName>Palm webOS</fullName>
                </value>
                <value>
                    <fullName>Playstation3</fullName>
                </value>
                <value>
                    <fullName>Playstation4</fullName>
                </value>
                <value>
                    <fullName>PSP</fullName>
                </value>
                <value>
                    <fullName>Samsung Bada</fullName>
                </value>
                <value>
                    <fullName>Unix</fullName>
                </value>
                <value>
                    <fullName>Wii</fullName>
                </value>
                <value>
                    <fullName>Wii U</fullName>
                </value>
                <value>
                    <fullName>Windows Mobile</fullName>
                </value>
                <value>
                    <fullName>WindowsPhone</fullName>
                </value>
                <value>
                    <fullName>Xbox 360</fullName>
                </value>
                <value>
                    <fullName>Xbox One</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__AdPostalCodes__c</fullName>
        <inlineHelpText>Targeting Postal Codes</inlineHelpText>
        <label>AdPostalCodes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdStatesRegions__c</fullName>
        <inlineHelpText>Bitte nicht mehr benutzen, wird nicht mehr unterstützt von Advendio</inlineHelpText>
        <label>AdStatesRegions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdType__c</fullName>
        <label>Ad Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ADvendio__Billing_category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Bulk</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Price Priority</fullName>
                </value>
                <value>
                    <fullName>InHouse</fullName>
                </value>
                <value>
                    <fullName>Legacy DFP</fullName>
                </value>
                <value>
                    <fullName>Click Tracking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__AdWebBrowsers__c</fullName>
        <description>You can define the web browers with which this ad spec shall be displayed.</description>
        <inlineHelpText>You can define the web browers with which this ad spec shall be displayed.</inlineHelpText>
        <label>AdWebBrowsers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Microsoft Internet Explorer</fullName>
                </value>
                <value>
                    <fullName>Firefox</fullName>
                </value>
                <value>
                    <fullName>Mozilla</fullName>
                </value>
                <value>
                    <fullName>Netscape Navigator</fullName>
                </value>
                <value>
                    <fullName>Opera</fullName>
                </value>
                <value>
                    <fullName>Safari</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Ad_Id__c</fullName>
        <description>The ad server interface will enter the ID of the ad when booked to the ad server.</description>
        <externalId>true</externalId>
        <inlineHelpText>The ad server interface will enter the ID of the ad when booked to the ad server.</inlineHelpText>
        <label>Ad Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Ad_Price__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This look-up relation displays the connection to the ad price.</description>
        <inlineHelpText>This look-up relation displays the connection to the ad price.</inlineHelpText>
        <label>Ad Price</label>
        <referenceTo>ADvendio__Ad_price__c</referenceTo>
        <relationshipLabel>Campaign Items</relationshipLabel>
        <relationshipName>Campaign_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Ad_Spec__c</fullName>
        <description>This formula displays the corresponding ad spec.</description>
        <formula>HYPERLINK(&quot;/&quot;&amp;  ADvendio__Ad_Price__r.ADvendio__Ad_Spec__c  , ADvendio__Ad_Price__r.ADvendio__Ad_Spec__r.Name)</formula>
        <inlineHelpText>This formula displays the corresponding ad spec.</inlineHelpText>
        <label>Ad Spec</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Additional_Ad_Ids__c</fullName>
        <description>This field is used for entering additional ad Ids which for example haven&apos;t been booked via the interface.</description>
        <inlineHelpText>Diese Feld dient der Eingabe von mehr als einer LineItem - ID vom Adserver - bei der Fakturierung/Reporting werden diese addiert.</inlineHelpText>
        <label>Additional Ad Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdserverName__c</fullName>
        <inlineHelpText>Wird automatisch per Workflow/Feldaktualisierung befüllt. Wenn das Feld befüllt ist, wird der Inhalt für den Namen im AdServer verwendet (sollte die Regel sein); wenn es leer ist, wird der Name der KampagnenPosition verwendet (siehe KV 1799)</inlineHelpText>
        <label>Adserver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdserverPrice__c</fullName>
        <description>Enter the price that should be set for this campaign item in Ad server. Considered only if the field &quot;AdServer Price Field&quot; in the object &quot;AdServer Login&quot; has the value &quot;Adserver Price&quot;.</description>
        <inlineHelpText>Enter the price that should be set for this campaign item in Ad server. Considered only if the field &quot;AdServer Price Field&quot; in the object &quot;AdServer Login&quot; has the value &quot;Adserver Price&quot;.</inlineHelpText>
        <label>Adserver Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdserverStatus__c</fullName>
        <label>Adserver Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Paused</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Adserver_Adv_Advertiser_ID__c</fullName>
        <description>The ad server interface will enter the ad server ID of the advertiser here.</description>
        <inlineHelpText>The ad server interface will enter the ad server ID of the advertiser here.</inlineHelpText>
        <label>Adserver Adv. (Advertiser ID)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Adserver_ID_Order_ID__c</fullName>
        <description>The ad server interface will enter the ad server order ID of the campaign when booked.</description>
        <externalId>true</externalId>
        <inlineHelpText>The ad server interface will enter the ad server order ID of the campaign when booked.</inlineHelpText>
        <label>Adserver ID Order ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Agency_Commission__c</fullName>
        <description>Here you can set the agency commission in percent for this campaign item.</description>
        <inlineHelpText>Here you can set the agency commission in percent for this campaign item.</inlineHelpText>
        <label>Agency Commission (%)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                    <default>true</default>
                    <label>15</label>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__AlternateId__c</fullName>
        <description>Can be used to store an alternative ID, maybe the ID of a third party system.</description>
        <label>Alternate ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AmountAPEX__c</fullName>
        <label>Amount (apex)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount_B2APEX__c</fullName>
        <label>Amount (B2) (apex)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount_B2__c</fullName>
        <formula>IF(ADvendio__Amount_B2APEX__c=0,ROUND((IF(TEXT(ADvendio__Billing_category__c)= &quot;CPM&quot;, ADvendio__Sales_Price__c  /1000 * ADvendio__Quantity__c, ADvendio__Sales_Price__c  * ADvendio__Quantity__c * CASE(1, IF(ADvendio__Frequency__c=0,1,0),1, ADvendio__Frequency__c) )* (1+ADvendio__SurchargeB3__c))+ ADvendio__SurchargeB3Abs__c, 2),ADvendio__Amount_B2APEX__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>not in use</inlineHelpText>
        <label>Amount (B2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount_B3APEX__c</fullName>
        <label>Amount (B3) (apex)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount_B3__c</fullName>
        <formula>IF(ADvendio__Amount_B3APEX__c=0,IF(TEXT(ADvendio__Billing_category__c)= &quot;CPM&quot;, ADvendio__Sales_Price__c /1000 * ADvendio__Quantity__c, ADvendio__Sales_Price__c * ADvendio__Quantity__c * CASE(1, IF(ADvendio__Frequency__c=0,1,0),1, ADvendio__Frequency__c)),ADvendio__Amount_B3APEX__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sales price</inlineHelpText>
        <label>Amount (B3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount__c</fullName>
        <formula>IF(ADvendio__AmountAPEX__c=0,ROUND(
(IF(TEXT(ADvendio__Billing_category__c)= &quot;CPM&quot;, ADvendio__Sales_Price__c  /1000 * ADvendio__Quantity__c, ADvendio__Sales_Price__c  * ADvendio__Quantity__c * CASE(1, IF(ADvendio__Frequency__c=0,1,0),1, ADvendio__Frequency__c) )* (1+ADvendio__SurchargeB3__c)
+ ADvendio__SurchargeB3Abs__c) * (1+ ADvendio__SurchargeB2__c) + ADvendio__SurchargeB2Abs__c 
, 2),ADvendio__AmountAPEX__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula calculates gross sales depending from the billing category. (sales price x quantity) or (sales price/1000 x quantity).</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount_net3APEX__c</fullName>
        <label>Amount net3 (apex)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount_net3__c</fullName>
        <description>This formula subtracts the VMK from the agency net (N2).</description>
        <formula>IF(ADvendio__Amount_net3APEX__c=0,ADvendio__Amount_net_net__c * (1 - ADvendio__Third_party_commission__c ),ADvendio__Amount_net3APEX__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula subtracts the VMK from the agency net (N2).</inlineHelpText>
        <label>Amount net3</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount_netAPEX__c</fullName>
        <label>Amount net (apex)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount_net__c</fullName>
        <formula>IF(ADvendio__Amount_netAPEX__c=0,ROUND(
(IF(TEXT(ADvendio__Billing_category__c)= &quot;CPM&quot;, ADvendio__Sales_Price__c  /1000 * ADvendio__Quantity__c, ADvendio__Sales_Price__c  * ADvendio__Quantity__c * CASE(1, IF(ADvendio__Frequency__c=0,1,0),1, ADvendio__Frequency__c) )* (1+ADvendio__SurchargeB3__c)
+ ADvendio__SurchargeB3Abs__c) * (1+ ADvendio__SurchargeB2__c) + ADvendio__SurchargeB2Abs__c 
, 2) * (1- ADvendio__Rate_Discount_1__c ) * (1- ADvendio__Rate_Discount_2__c ) * (1- ADvendio__Rate_Discount_3__c ) * (1- ADvendio__Rate_Discount_4__c ),ADvendio__Amount_netAPEX__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula subtracts the volume discount, customer discount, agency discount and the special discount from gross sales.</inlineHelpText>
        <label>Amount net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount_net_netAPEX__c</fullName>
        <label>Amount_net_net (apex)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount_net_net__c</fullName>
        <description>This formula subtracts the agency commission from the customer net (N1).</description>
        <formula>IF( ADvendio__Amount_net_netAPEX__c=0,ADvendio__Amount_net__c*(Case(1, IF(ADvendio__AC__c=TRUE,1,0), 1- IF(ISBLANK(TEXT(ADvendio__Agency_Commission__c)), 0, VALUE(TEXT(ADvendio__Agency_Commission__c)) /100),1)),ADvendio__Amount_net_netAPEX__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula subtracts the agency commission from the customer net (N1).</inlineHelpText>
        <label>Amount net/net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__AvAsEligibleAi__c</fullName>
        <description>Total number of impressions delivered by the ad server that were eligible to measure viewability according to DFP.</description>
        <inlineHelpText>Total number of impressions delivered by the ad server that were eligible to measure viewability according to DFP.</inlineHelpText>
        <label>AV AS Eligible AI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__AvAsMeasurableAiRate__c</fullName>
        <description>The percentage of impressions delivered by the ad server that were measurable by active view ( out of all the ad server impressions sampled for active view) according to DFP.</description>
        <inlineHelpText>The percentage of impressions delivered by the ad server that were measurable by active view ( out of all the ad server impressions sampled for active view) according to DFP.</inlineHelpText>
        <label>AV AS Measurable AI Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__AvAsMeasurableAi__c</fullName>
        <description>The number of impressions delivered by the ad server that were sampled, and measurable by active view according to DFP.</description>
        <inlineHelpText>The number of impressions delivered by the ad server that were sampled, and measurable by active view according to DFP.</inlineHelpText>
        <label>AV AS Measurable AI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__AvAsViewableAiManual__c</fullName>
        <description>Manually override the number of impressions delivered by the ad server viewed on the user&apos;s screen according to DFP.</description>
        <inlineHelpText>Manually override the number of impressions delivered by the ad server viewed on the user&apos;s screen according to DFP.</inlineHelpText>
        <label>AV AS Viewable AI (Manual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__AvAsViewableAiRate__c</fullName>
        <description>The percentage of impressions delivered by the ad server viewed on the user&apos;s screen (out of the ad server impressions measurable by active view) according to DFP.</description>
        <inlineHelpText>The percentage of impressions delivered by the ad server viewed on the user&apos;s screen (out of the ad server impressions measurable by active view) according to DFP.</inlineHelpText>
        <label>AV AS Viewable AI Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__AvAsViewableAi__c</fullName>
        <description>The number of impressions delivered by the ad server viewed on the user&apos;s screen according to DFP.</description>
        <inlineHelpText>The number of impressions delivered by the ad server viewed on the user&apos;s screen according to DFP.</inlineHelpText>
        <label>AV AS Viewable AI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__AvTotalEligibleAi__c</fullName>
        <description>Total number of impressions that were eligible to measure viewability according to DFP.</description>
        <inlineHelpText>Total number of impressions that were eligible to measure viewability according to DFP.</inlineHelpText>
        <label>AV Total Eligible AI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__AvTotalMeasurableAi__c</fullName>
        <description>The total number of impressions that were sampled and measured by active view according to DFP.</description>
        <inlineHelpText>The total number of impressions that were sampled and measured by active view according to DFP.</inlineHelpText>
        <label>AV Total Measurable AI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__AvTotalViewableAiRate__c</fullName>
        <description>The percentage of total impressions viewed on the user&apos;s screen (out of the total impressions measurable by active view) according to DFP.</description>
        <inlineHelpText>The percentage of total impressions viewed on the user&apos;s screen (out of the total impressions measurable by active view) according to DFP.</inlineHelpText>
        <label>AV Total Viewable AI Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__AvTotalViewableAi__c</fullName>
        <description>The total number of impressions viewed on the user&apos;s screen according to DFP.</description>
        <inlineHelpText>The total number of impressions viewed on the user&apos;s screen according to DFP.</inlineHelpText>
        <label>AV Total Viewable AI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__AvailabilityRunning__c</fullName>
        <description>If a Campaign Item is already running, the Ad Server Gateway updates the Availability for the remaining runtime after using the availability forecast.</description>
        <inlineHelpText>If a Campaign Item is already running, the Ad Server Gateway updates the Availability for the remaining runtime after using the availability forecast.</inlineHelpText>
        <label>Availability (running)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Availability__c</fullName>
        <description>The ad server interface will enter the availability during an availabilty request.</description>
        <inlineHelpText>The ad server interface will enter the availability during an availabilty request.</inlineHelpText>
        <label>Availability (planned)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Available__c</fullName>
        <description>The flag will be yellow if the no availability forecast has been done, green if the requested amount is available and red if it is not available.</description>
        <formula>IMAGE (IF (ISBLANK(ADvendio__Availability__c), 
&quot;/img/samples/flag_yellow.gif&quot;, 
IF ( 
AND( 
ADvendio__Ad_Price__r.ADvendio__Ad_Spec__r.ADvendio__Ad_Type__r.RecordType.DeveloperName!=&quot;Print&quot;, 
ADvendio__Ad_Price__r.ADvendio__Ad_Spec__r.ADvendio__Ad_Type__r.RecordType.DeveloperName!=&quot;Standard&quot;, 
OR( 
ISPICKVAL(ADvendio__Billing_category__c, &quot;CPD&quot;), ISPICKVAL(ADvendio__Billing_category__c, &quot;CPW&quot;),ISPICKVAL(ADvendio__Billing_category__c, &quot;CPMo&quot;), 
ISPICKVAL(ADvendio__Billing_category__c, &quot;CPY&quot;), ISPICKVAL(ADvendio__Billing_category__c, &quot;Fixed Price&quot;) 
) 
), 
IF (ISBLANK(ADvendio__Guaranteed_AI__c), 
&quot;/img/samples/flag_yellow.gif&quot;, 
IF (ADvendio__BookingQuantity__c - ADvendio__Availability__c &lt;= 0, 
&quot;/img/samples/flag_green.gif&quot;, 
&quot;/img/samples/flag_red.gif&quot;) 
), 
IF (ADvendio__BookingQuantity__c - ADvendio__Availability__c &lt;= 0, 
&quot;/img/samples/flag_green.gif&quot;, 
&quot;/img/samples/flag_red.gif&quot;) 
) 
), 
&quot;priority flag&quot;)</formula>
        <inlineHelpText>The flag will be yellow if the no availability forecast has been done, green if the requested amount is available and red if it is not available.</inlineHelpText>
        <label>Available</label>
        <type>Text</type>
    </fields>
</CustomObject>